--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -5,15 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{nom_categorie}} - Réunion Wiki</title>
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <h1>
-        <h1><a href="{{categorie}}">{{nom_categorie}}</a></h1>
-      </h1>
+      <h1 class="site_title"><a href="/">Réunion Wiki</a></h1>
     </header>
+
     <main>
       <div class="category">
+        <h2><a href="{{categorie}}">{{nom_categorie}}</a></h2>
         <ul>
           {% for site in sites%}
           <li>
@@ -27,8 +41,10 @@
             : {{site['description']}}
           </li>
           {% endfor %}
+          <div id="bouton_plus">
+            <a href="/"> Retour à l'accueil</a>
+          </div>
         </ul>
-        <a href="/"> Retour à l'accueil</a>
       </div>
     </main>
     <footer></footer>
