--- a/templates/index.html
+++ b/templates/index.html
@@ -16,22 +16,27 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <h1 class="titre_site"><a href="/">Réunion Wiki</a></h1>
+      <h1 class="site_title"><a href="/">Réunion Wiki</a></h1>
       <p>
         Bienvenue sur <strong>Réunion Wiki 🌴</strong> <br />
         Un répertoire <em>simple, rapide et local</em> pour accéder aux sites
         essentiels de La Réunion.
       </p>
     </header>
+
     <main>
       <div class="categories">
         {% for categorie, sites in data.items() %}
         <div class="category">
-          <h2>{{ categorie }}</h2>
+          <h2><a href="/categorie/{{categorie}}">{{categorie}}</a></h2>
 
           <ul>
             {% for site in sites %}
@@ -46,12 +51,20 @@
               : {{ site['description']}}
             </li>
             {% endfor%}
-            <a href="/categorie/{{categorie}}"> Voir plus </a>
+            <div id="bouton_plus">
+              <a href="/categorie/{{categorie}}"> Voir plus </a>
+            </div>
           </ul>
         </div>
         {%endfor%}
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <p><strong>Réunion Wiki</strong> - Simplifions l'information locale.</p>
+      <nav>
+        <a href="/mentions-legales" target="_blank">Mentions légales</a> |
+        <a href="" target="_blank">Contact</a>
+      </nav>
+    </footer>
   </body>
 </html>
