modif mentions legales

--- a/templates/mentions_legales.html
+++ b/templates/mentions_legales.html
@@ -31,6 +31,15 @@
       Statut : Site non commercial, sans but lucratrif
     </p>
     <h2>Hébergement</h2>
+    <p>OVH SAS<br /></p>
+    <p>2 rue Kellermann, 59100 Roubaix, France<br /></p>
+    <p>
+      Site :
+      <a href="https://www.ovhcloud.com/fr/" target="__blank"
+        >https://www.ovhcloud.com/fr/</a
+      ><br />
+    </p>
+
     <p><strong>En cours</strong><br /></p>
     <h2>Propriété intellectuelle</h2>
     <p>
