--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,13 @@
       </div>
     </main>
     <footer>
+      <a
+        href="https://forms.gle/kimeZjk8TPQAhMCE6"
+        class="propos_site"
+        target="__blank"
+      >
+        Proposez un site !</a
+      >
       <p><strong>Réunion Wiki</strong> - Simplifions l'information locale.</p>
       <nav>
         <a href="/mentions-legales" target="_blank">Mentions légales</a> |
