--- a/templates/mentions_legales.html
+++ b/templates/mentions_legales.html
@@ -21,8 +21,11 @@
     />
   </head>
   <body>
-    <h1>Mentions légales</h1>
-    <h2>Éditeur du site</h2>
+    <header>
+      <h1 class="site_title"><a href="/">Réunion Wiki</a></h1>
+    </header>
+    <h2>Mentions légales</h2>
+    <h3>Éditeur du site</h3>
     <p>
       <strong>Réunion Wiki</strong> - Projet local indépendant <br />
       Responsable de la publication : Kery RCIHARD DASSOT <br />
@@ -30,7 +33,7 @@
       <a href="mailto:contact@reunionwiki.re">contact@reunionwiki.re</a> <br />
       Statut : Site non commercial, sans but lucratrif
     </p>
-    <h2>Hébergement</h2>
+    <h3>Hébergement</h3>
     <p>OVH SAS<br /></p>
     <p>2 rue Kellermann, 59100 Roubaix, France<br /></p>
     <p>
@@ -41,13 +44,13 @@
     </p>
 
     <p><strong>En cours</strong><br /></p>
-    <h2>Propriété intellectuelle</h2>
+    <h3>Propriété intellectuelle</h3>
     <p>
       Sauf mention contraire, les contenus présents sur ce site (textes, images,
       structure) sont la propriété exclusive de Réunion Wiki. <br />
       Toute reproduction ou utilisation sans autorisation est interdite.
     </p>
-    <h2>Responsabilité</h2>
+    <h3>Responsabilité</h3>
     <p>
       Réunion Wiki s'efforce de fournir des informations fiables et à jour, mais
       ne garantit pas l'exactitude ou l'exhaustivité du contenu. <br />
@@ -59,7 +62,7 @@
       Réunion Wiki ne peut être tenu responsable de leur disponibilité,
       exactitude ou légalité.
     </p>
-    <h2>Données personnelles</h2>
+    <h3>Données personnelles</h3>
     <p>
       Ce site ne collecte actuellement aucune donnée personnelle. Si un
       formulaire est mis en place, les données transmises seront utilisées
@@ -67,7 +70,7 @@
       la Protection des Données (RGPD). <br />
       Aucune donnée n'est vendue, cédée ou transmise à des tiers.
     </p>
-    <h2>Cookies</h2>
+    <h3>Cookies</h3>
     <p>
       Ce site n'utilise pas de cookies à des fins de suivi ou de publicité.
       <br />
@@ -75,5 +78,8 @@
       améliorer les temps de chargement. Ces éléments ne collectent aucune
       information personnelle.
     </p>
+    <div id="bouton_plus">
+      <a href="/"> Retour à l'accueil</a>
+    </div>
   </body>
 </html>
