--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -47,6 +47,19 @@
         </ul>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <a
+        href="https://forms.gle/kimeZjk8TPQAhMCE6"
+        class="propos_site"
+        target="__blank"
+      >
+        Proposez un site !</a
+      >
+      <p><strong>Réunion Wiki</strong> - Simplifions l'information locale.</p>
+      <nav>
+        <a href="/mentions-legales" target="_blank">Mentions légales</a> |
+        <a href="" target="_blank">Contact</a>
+      </nav>
+    </footer>
   </body>
 </html>
