--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -42,7 +42,7 @@
           </li>
           {% endfor %}
           <div id="bouton_plus">
-            <a href="/"> Retour à l'accueil</a>
+            <a href="/"> Retour vers l'accueil</a>
           </div>
         </ul>
       </div>
