--- a/templates/mentions_legales.html
+++ b/templates/mentions_legales.html
@@ -28,7 +28,7 @@
     <h3>Éditeur du site</h3>
     <p>
       <strong>Réunion Wiki</strong> - Projet local indépendant <br />
-      Responsable de la publication : Kery RCIHARD DASSOT <br />
+      Responsable de la publication : Kery RICHARD DASSOT <br />
       Contact :
       <a href="mailto:contact@reunionwiki.re">contact@reunionwiki.re</a> <br />
       Statut : Site non commercial, sans but lucratrif
@@ -42,8 +42,6 @@
         >https://www.ovhcloud.com/fr/</a
       ><br />
     </p>
-
-    <p><strong>En cours</strong><br /></p>
     <h3>Propriété intellectuelle</h3>
     <p>
       Sauf mention contraire, les contenus présents sur ce site (textes, images,
@@ -79,7 +77,7 @@
       information personnelle.
     </p>
     <div id="bouton_plus">
-      <a href="/"> Retour à l'accueil</a>
+      <a href="/"> Retour vers l'accueil</a>
     </div>
   </body>
 </html>
