ajout lien contact + modif css maintenance

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,9 @@
       <p><strong>Réunion Wiki</strong> - Simplifions l'information locale.</p>
       <nav>
         <a href="/mentions-legales" target="_blank">Mentions légales</a> |
-        <a href="mailto:contact@reunionwiki.re" target="_blank">Contact</a>
+        <a href="https://forms.gle/GScJkMiEZXVSted78" target="_blank"
+          >Contact</a
+        >
       </nav>
     </footer>
 
