correction orthographe grammaire synthax

--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -13,7 +13,7 @@ endblock %} {% block content %}
       : {{ site['description'] }}
     </li>
     {% endfor %}
-    <div id="bouton_plus"><a href="/">Retour vers l'accueil</a></div>
+    <div id="bouton_plus"><a href="/">← Retour à l'accueil</a></div>
   </ul>
 </div>
 {% endblock %}
