--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 {% block header_content %}
 <p>
   Bienvenue sur <strong>Réunion Wiki 🌴</strong><br />
-  Un répertoire <em>simple, rapide et local</em> pour accéder aux sites
-  essentiels de La Réunion.
+  Un répertoire <em>simple, rapide et local</em> pour accéder facilement aux
+  sites essentiels de La Réunion.
 </p>
 {% endblock %} {% block content %}
 <div class="categories">
@@ -22,7 +22,7 @@
       </li>
       {% endfor %}
       <div id="bouton_plus">
-        <a href="/categorie/{{categorie}}">Voir plus</a>
+        <a href="/categorie/{{categorie}}">Découvrir plus de sites</a>
       </div>
     </ul>
   </div>
