--- a/templates/mentions_legales.html
+++ b/templates/mentions_legales.html
@@ -8,14 +8,14 @@ endblock %} {% block content %}
   Responsable de la publication : Kery RICHARD DASSOT<br />
   Contact : <a href="mailto:contact@reunionwiki.re">contact@reunionwiki.re</a
   ><br />
-  Statut : Site non commercial, sans but lucratif
+  Statut : Site non commercial, sans but lucratif.
 </p>
 
 <h3>Hébergement</h3>
 <p>
   OVH SAS<br />2 rue Kellermann, 59100 Roubaix, France<br />
   Site :
-  <a href="https://www.ovhcloud.com/fr/" target="__blank"
+  <a href="https://www.ovhcloud.com/fr/" target="_blank"
     >https://www.ovhcloud.com/fr/</a
   >
 </p>
@@ -35,14 +35,15 @@ endblock %} {% block content %}
 
 <h3>Données personnelles</h3>
 <p>
-  Aucune donnée collectée. Si un formulaire est ajouté, les données seront
-  traitées selon le RGPD.
+  Aucune donnée personnelle n'est collectée. Si un formulaire est ajouté, les
+  données seront traitées selon le RGPD.
 </p>
 
 <h3>Cookies</h3>
 <p>
-  Aucun cookie de suivi ou pub. Mise en cache possible pour accélérer le site.
+  Aucun cookie de suivi ou à des fins publicitaires. Une mise en cache peut être
+  utilisée afin d'accélérer le chargement du site.
 </p>
 
-<div id="bouton_plus"><a href="/">Retour vers l'accueil</a></div>
+<div id="bouton_plus"><a href="/">← Retour à l'accueil</a></div>
 {% endblock %}
