--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,27 @@
   sites essentiels de La Réunion.
 </p>
 {% endblock %} {% block content %}
+<div class="nouveaux-sites">
+  <h2><a href="/nouveaux-sites">📌 Derniers sites ajoutés</a></h2>
+  <ul>
+    {% for site in derniers_sites %}
+    <li>
+      <a href="{{ site['lien'] }}" target="_blank" rel="noopener noreferrer">
+        <strong>{{ site['nom'] }}</strong>
+      </a>
+      <small>
+        <a href="/categorie/{{ site['categorie'] }}" style="font-style: italic">
+          📂 {{ site['categorie'] }}
+        </a> </small
+      ><br />
+      <small>{{ site['description'][:80] }}...</small>
+    </li>
+    {% endfor %}
+  </ul>
+  <div id="bouton_plus">
+    <a href="/nouveaux-sites">Découvrir plus de sites</a>
+  </div>
+</div>
 <div class="categories">
   {% for categorie, sites in data.items() %}
   <div class="category">
