Force update de la PWA avec cache versionné

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
+      href="{{ url_for('static', filename='style.css') }}?v=2"
     />
 
     <!-- Fonts -->
