--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -1,20 +1,22 @@
-<!-- templates/categorie.html -->
 {% extends "base.html" %} {% block title %}{{ nom_categorie }} - Réunion Wiki{%
 endblock %} {% block content %}
-
 <div class="category">
-  <h2><a href="{{categorie}}">{{ nom_categorie }}</a></h2>
+  <h2>📂 {{ nom_categorie }}</h2>
+
   <ul>
     {% for site in sites %}
     <li>
       <a href="{{ site['lien'] }}" target="_blank" rel="noopener noreferrer">
-        <strong>{{ site['nom'] }}</strong>{% if site['ville'] %} - {{
+        <strong>{{ site['nom'] }}</strong>{% if site['ville'] %} – {{
         site['ville'] }}{% endif %} ↗
       </a>
       : {{ site['description'] }}
     </li>
     {% endfor %}
-    <div id="bouton_plus"><a href="/">← Retour à l'accueil</a></div>
   </ul>
+
+  <div id="bouton_plus">
+    <a href="/">← Retour à l'accueil</a>
+  </div>
 </div>
 {% endblock %}
