--- a/templates/nouveaux_sites.html
+++ b/templates/nouveaux_sites.html
@@ -13,7 +13,7 @@ Wiki{% endblock %} {% block content %}
           {{ site['categorie'] }}
         </a> </small
       ><br />
-      <small>{{ site['description'][:100] }}...</small>
+      <small>{{ site['description'][:100] }}</small>
     </li>
 
     {% endfor %}
