--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>{% block title %}Réunion Wiki{% endblock %}</title>
+    <title>
+      {% block title %}Les meilleurs sites internet de La Réunion - Réunion
+      Wiki{% endblock %}
+    </title>
     <meta
       name="description"
-      content="{% block description %}Simplifions l'accès aux sites internet utiles de La Réunion : santé, éducation, loisirs, services...{% endblock %}"
+      content="{% block description %}
+Réunion Wiki référence les meilleurs sites internet de La Réunion : santé, démarches, culture, emploi, services... Un portail pratique, rapide et 100% local.
+{% endblock %}"
     />
     <meta
       name="keywords"
