--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,10 @@
         <strong>{{ site['nom'] }}</strong>
       </a>
       <small>
-        <a href="/categorie/{{ site['categorie'] }}" style="font-style: italic">
+        <a
+          href="/categorie/{{ categories_slug[site['categorie']] }}"
+          style="font-style: italic"
+        >
           - {{ site['categorie'] }}
         </a> </small
       ><br />
@@ -31,7 +34,9 @@
 <div class="categories">
   {% for categorie, sites in data.items() %}
   <div class="category">
-    <h2><a href="/categorie/{{categorie}}">{{categorie}}</a></h2>
+    <h2>
+      <a href="/categorie/{{ categories_slug[categorie] }}">{{categorie}}</a>
+    </h2>
     <ul>
       {% for site in sites %}
       <li>
@@ -43,7 +48,9 @@
       </li>
       {% endfor %}
       <div id="bouton_plus">
-        <a href="/categorie/{{categorie}}">Découvrir plus de sites</a>
+        <a href="/categorie/{{ categories_slug[categorie] }}"
+          >Découvrir plus de sites</a
+        >
       </div>
     </ul>
   </div>
