--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <meta
       name="description"
       content="{% block description %}
-Réunion Wiki référence les meilleurs sites internet de La Réunion : santé, démarches, culture, emploi, services... Un portail pratique, rapide et 100% local.
+Réunion Wiki référence les meilleurs sites internet de La Réunion : culture, emploi, services... Un portail pratique, rapide et 100% local.
 {% endblock %}"
     />
     <meta
@@ -24,11 +24,11 @@ Réunion Wiki référence les meilleurs sites internet de La Réunion : santé, 
     <!-- Open Graph (partage réseaux sociaux) -->
     <meta
       property="og:title"
-      content="{% block og_title %}Réunion Wiki - Sites utiles de La Réunion{% endblock %}"
+      content="{% block og_title %}Réunion Wiki - Sites internet utiles de La Réunion{% endblock %}"
     />
     <meta
       property="og:description"
-      content="{% block og_description %}Accédez facilement à tous les sites réunionnais essentiels classés par catégorie.{% endblock %}"
+      content="{% block og_description %}Accédez facilement à tous les sites internet réunionnais essentiels classés par catégorie.{% endblock %}"
     />
     <meta property="og:url" content="{{ request.url }}" />
     <meta property="og:type" content="website" />
