--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!-- templates/index.html -->
-{% extends "base.html" %} {% block title %}Réunion Wiki - Tous les sites utiles
-à La Réunion.{% endblock %} {% block header_content %}
+{% extends "base.html" %} {% block title %}Réunion Wiki - Les meilleurs sites
+internet utiles de La Réunion.{% endblock %} {% block header_content %}
 <p>
   Bienvenue sur <strong>Réunion Wiki 🌴</strong><br />
   Un répertoire <em>simple, rapide et local</em> pour accéder facilement aux
