--- a/templates/nouveaux_sites.html
+++ b/templates/nouveaux_sites.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %} {% block title %}Nouveaux sites ajoutés - Réunion
+{% extends "base.html" %} {% block title %}Derniers sites ajoutés - Réunion
 Wiki{% endblock %} {% block content %}
 <div class="category">
-  <h2>Nouveaux sites ajoutés</h2>
+  <h2>📌 Derniers sites ajoutés</h2>
   <ul>
     {% for site in sites %}
     <li>
