--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>
-      {% block title %}Les meilleurs sites internet de La Réunion - Réunion
-      Wiki{% endblock %}
+      {% block title %}Réunion Wiki - Les meilleurs sites internet utiles de La
+      Réunion.{% endblock %}
     </title>
     <meta
       name="description"
